// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`versionControl reducer should GET_VERSION_FULFILLED 1`] = `
Object {
  "build": "v51",
  "errorMessage": "",
  "isError": false,
  "isPending": false,
  "version": "1.0.1",
}
`;

exports[`versionControl reducer should GET_VERSION_PENDING 1`] = `
Object {
  "build": "",
  "errorMessage": "",
  "isError": false,
  "isPending": true,
  "version": "",
}
`;

exports[`versionControl reducer should GET_VERSION_REJECTED 1`] = `
Object {
  "build": "",
  "errorMessage": "ErrorMessage",
  "isError": true,
  "isPending": false,
  "version": "",
}
`;

exports[`versionControl reducer should return the initial state 1`] = `
Object {
  "build": "",
  "errorMessage": "",
  "isError": false,
  "isPending": false,
  "version": "",
}
`;
